--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
     "core-js": "^3.6.5",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7",
     "vue": "^2.6.11",
     "vuex": "^3.4.0"
   },
